<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="adapter_freizeiten_noconnection">No connection</string>
    <string name="adapter_programm_defaultnotiz">Edit note</string>
    <string name="adapter_programmviewpager_day">Day</string>

    <string name="activity_about_activity_about_logo">CVJM Bayern Logo</string>
    <string name="activity_about_appAuthor">Doro B. and Aron M.</string>
    <string name="activity_about_appCode">Source code:</string>
    <string name="activity_about_appInfo">CVJM Bayern Konfi Castle App</string>
    <string name="activity_about_appLink">https://github.com/knusperkrone/Konfi-Castle</string>
    <string name="activity_about_appVersion">Version 1.5</string>
    <string name="activity_about_ma_pos">Congratulation!</string>
    <string name="activity_about_ma_neg">Not so cocky!</string>
    <string name="activity_about_participants">Contributors:</string>

    <string name="activity_notiz_button_cancel">Abort</string>
    <string name="activity_notiz_button_delete">Delete</string>
    <string name="activity_notiz_button_save">Save</string>
    <string name="activity_notiz_content_hint">Insert note here</string>
    <string name="activity_notiz_done_delete">Note deleted!</string>
    <string name="activity_notiz_done_save">Note saved!</string>
    <string name="activity_notiz_done_update">Note updated!</string>
    <string name="activity_notiz_error_delete">There is nothing to delete!</string>
    <string name="activity_notiz_error1_save">Is the note already existent?</string>
    <string name="activity_notiz_error2_save">Save an empty note?</string>
    <string name="activity_notiz_error_update">Do you rather want to delete the note?</string>

    <string name="activity_settings_event_summary">About which events you want to receive notifications?</string>
    <string name="activity_settings_event_title">Notifications</string>
    <string name="activity_settings_help_summary">Show help</string>
    <string name="activity_settings_help_title">Help</string>
    <string name="activity_settings_notification_summary">You are on the</string>
    <string name="activity_settings_notification_time_title">Delay</string>
    <string name="activity_settings_notification_title">Konfi Castle</string>
    <string name="activity_settings_spam_summary_neg">Only the current notification is displayed</string>
    <string name="activity_settings_spam_summary_pos">Every notification is displayed individually</string>
    <string name="activity_settings_spam_title">Optimized notifications</string>
    <string name="activity_settings_vibrate_summary_neg">Vibration is disabled</string>
    <string name="activity_settings_vibrate_summary_pos">Vibration is enabled</string>
    <string name="activity_settings_vibrate_title">Vibration</string>

    <string name="app_name">Konfi Castle</string>

    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More..</string>
    <string name="changelog_title">What is new?</string>
    <string name="changelog_version_format">Version <xliff:g id="version_name">%s</xliff:g></string>

    <string name="dialog_welcome_title">Welcome!</string>
    <string name="dialog_welcome_button_pos">Alright</string>
    <string name="dialog_welcome_button_neg">Settings</string>
    <string name="dialog_welcome_text">Hey\n\nTo be able to use the app properly, you should choose you current event.\nYou also can adjust the Apps notifications behaviour.\n\nWith a long press on program point, you can make your own Notes on this appointment.\n\nYou can identify appointment with notes an the red indicator of the left side\n\nI hope you enjoy the app and don\'t get distracted by it!</string>

    <string name="fragment_freizeit_descr">placeholder</string>
    <string name="fragment_settings_titleKC">Your current event is the KC</string>
    <string name="fragment_settings_titleOC">Your current event is the KC</string>
    <string name="fragment_settings_notification1">You will get notified</string>
    <string name="fragment_settings_notification2">minutes bevor the event</string>

    <string name="helper_dbopenhelper_dberror">Oh, a critical error! Please restart the App!</string>
    <string name="helper_dbupdater_success">Database got updated</string>
    <string name="helper_notificationservice_text1">The show continues in</string>
    <string name="helper_notificationservice_text2"> minutes</string>
    <string name="helper_notificationservice_guestbooktitle">Write something in the guestbook!</string>
    <string name="helper_notificationservice_guestbooktext">Share how much you enjoyed the event!</string>

    <string name="key_event" translatable="false">event_key</string>
    <string name="key_firstboot" translatable="false">firstboot</string>
    <string name="key_help" translatable="false">help_key</string>
    <string name="key_instanz" translatable="false">instanz_key</string>
    <string name="key_ma" translatable="false">ma_key</string>
    <string name="key_notification" translatable="false">notification_key</string>
    <string name="key_notification_time" translatable="false">notification_time_key</string>
    <string name="key_spam" translatable="false">spam_key</string>
    <string name="key_vibrate" translatable="false">vibrate_key</string>

    <string name="nav_abendgebet">Evening Pray</string>
    <string name="nav_about">About</string>
    <string name="nav_angebote">More activitys</string>
    <!--<string name="nav_feedback">Feedback</string>-->
    <string name="nav_gaestebuch">Guestbook</string>
    <string name="nav_programm">Program</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_startInDenTag">Start in the Day</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

</resources>
