<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_vibrate"
        android:title="@string/activity_settings_vibrate_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_spam"
        android:title="@string/activity_settings_spam_title" />

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/notification_time_values"
        android:entryValues="@array/notification_time_values"
        android:key="@string/key_notification_time"
        android:title="@string/activity_settings_notification_time_title" />


    <MultiSelectListPreference
        android:defaultValue="@array/notification_values"
        android:entries="@array/notification_entries"
        android:entryValues="@array/notification_values"
        android:key="@string/key_notification"
        android:summary="@string/activity_settings_event_summary"
        android:title="@string/activity_settings_event_title" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/castle_entries"
        android:entryValues="@array/castle_values"
        android:key="@string/key_instanz"
        android:summary="@string/activity_settings_notification_summary"
        android:title="@string/activity_settings_notification_title" />

    <Preference
        android:key="@string/key_help"
        android:summary="@string/activity_settings_help_summary"
        android:title="@string/activity_settings_help_title" />

</PreferenceScreen>