<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="@string/activity_about_activity_about_logo"
            android:paddingTop="40dp"
            app:srcCompat="@drawable/cvjm_logo" />


        <TextView
            android:id="@+id/about_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_logo"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/activity_about_appInfo" />

        <TextView
            android:id="@+id/about_mit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_info"
            android:layout_centerHorizontal="true"
            android:padding="0dp"
            android:text="@string/activity_about_participants" />

        <TextView
            android:id="@+id/about_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_mit"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/activity_about_appAuthor" />

        <TextView
            android:id="@+id/about_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_author"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/activity_about_appCode" />

        <TextView
            android:id="@+id/about_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_code"
            android:layout_centerHorizontal="true"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/activity_about_appLink" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_link"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/activity_about_appVersion" />

    </RelativeLayout>

</ScrollView>